Fixed alignment of mag boxes

--- a/style.css
+++ b/style.css
@@ -95,13 +95,13 @@ input[type=checkbox] {
 }
 #mag_viewer_1 {
   left: 1020px;
-  top: 1075px;
+  top: 1125px;
 }
 #mag_viewer_2 {
   left: 1020px;
-  top: 1320px;
+  top: 1370px;
 }
 #mag_viewer_3 {
   left: 1020px;
-  top: 1565px;
+  top: 1615px;
 }
